# dioxus-vanilla-template

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: components.rs  main.rs  routes.rs
